--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,13 @@ body {
     text-wrap: balance;
   }
 }
+
+
+@keyframes fadeInOut {
+  0%, 100% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.fade-animation {
+  animation: fadeInOut 3s ease-in infinite;
+}
